--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_image_compress: ^0.6.7
   share: ^0.6.4+1
   url_launcher: ^5.1.3
+  property_change_notifier: ^0.2.0
 
 
 dev_dependencies:
